--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@
   display: flex;
   flex-direction: column;
 }
-
+a.custom-card,
+a.custom-card:hover {
+  color: inherit;
+  text-decoration: none;
+}
 
 
